# mbox2imap

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.example.toml
src/: main.rs
src/mbox/: mod.rs
src/myimap/: mod.rs
