[package]
name = "mbox2imap"
version = "0.1.0"
authors = ["Michael Bøcker-Larsen <m19n@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
config = "0.10.1"
imap = "2.4.0"
native-tls = "0.2.6"
regex = "1"
serde = { version = "1.0.118", features = ["derive"] }
