[package]
name = "mbox2imap"
version = "0.2.0"
authors = ["Michael Bøcker-Larsen <mbl@code.boutique>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
config = "0.13.2"
imap = "2.4.1"
native-tls = "0.2.10"
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.lexical-core]
optional = true
version = ">= 0.6, < 0.8"
# [patch.crates-io]
# lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}
